<resources>
    <string name="app_name">Pizza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_order">Create a new order</string>
    <string name="order_pizza">Order pizza</string>
    <string name="next_button_text">Next</string>
    <string name="your_pizzas_size">Your pizza\'s size: %d\cm</string>
    <string name="pizza_cm">%d\cm</string>
    <string name="choose_the_pizza_size">Choose the pizza\'s size:</string>
    <string name="pizza_45_cm">45 centimeter pizza</string>
    <string name="pizza_30_cm">30 centimeter pizza</string>
    <string name="choose_toppings">Choose toppings:</string>
    <string name="main_headline">Main:</string>
    <string name="subtotal">Subtotal: %s</string>
    <string name="sausage">Sausage</string>
    <string name="bacon">Bacon</string>
    <string name="chicken">Chicken</string>
    <string name="cheese">Cheese</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="onions">Onions</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="black_olives">Black olives</string>
    <string name="shrimp">Shrimp</string>
    <string name="quantity">Quantity</string>
    <string name="flavors">Flavors</string>
    <string name="size">Size</string>
    <string name="pickup_date">Pickup date</string>
    <string name="summary_pizza">%d pizza</string>
    <string name="total">Total: %s</string>
    <string name="send_order_to_another_app">Send order to another app</string>
    <string name="order_email_subject">New Pizza order</string>
    <string name="order_details">
        Quantity: %1$s \n
        Flavors: %2$s \n
        Size: %3$s \n
        Pickup date: %4$s \n
        Total: %5$s \n\n
        Thank you!
    </string>
    <string name="cancel_order">Cancel order</string>
    <plurals name="pizzas">
        <item quantity="one">%s pizza</item>
        <item quantity="other">%s pizzas</item>
    </plurals>
</resources>