<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SummaryFragment">

    <data>
        <variable
            name="orderViewModel"
            type="com.example.pizza.ui.order.model.OrderViewModel" />

        <variable
            name="summaryFragment"
            type="com.example.pizza.ui.order.SummaryFragment" />
    </data>
    
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/side_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:orientation="vertical">


            <TextView
                style="@style/Widget.Pizza.TextView.Label"
                android:id="@+id/quantity_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:textStyle="normal"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Summary"
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/summary_pizza(orderViewModel.quantity)}"
                tools:text="1 pizza"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Label"
                android:id="@+id/flavors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/flavors"
                android:textStyle="normal"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Summary"
                android:id="@+id/flavors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{orderViewModel.flavorsString}"
                tools:text="Tomatoes, Cheese, Sausage"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Label"
                android:id="@+id/size_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/size"
                android:textStyle="normal"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Summary"
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/pizza_cm(orderViewModel.size)}"
                tools:text="45cm"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Label"
                android:id="@+id/pickup_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pickup_date"
                android:textStyle="normal"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Summary"
                android:id="@+id/pickup_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{orderViewModel.date}"
                tools:text="Sun Oct 27"/>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:layout_marginBottom="@dimen/side_margin"/>

            <TextView
                style="@style/Widget.Pizza.TextView.Summary.Total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@{@string/total(orderViewModel.total)}"
                android:layout_gravity="end"
                tools:text="Total: $12.00"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:text="@string/send_order_to_another_app"
                android:onClick="@{() -> summaryFragment.sendOrder()}"/>

        </LinearLayout>

    </ScrollView>

</layout>